# p1-bear-down-coders

./: LICENSE  README.md  integrate.py  orbit_integrator.py  present.ipynb  pyproject.toml  run1.py
src/p1_bear_down_coders.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/project/: orbit_integrator.py
test/: run.py
